Bug 488138 - Padding not remembered properly per display, but UI implies it is
Summary: Padding not remembered properly per display, but UI implies it is
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: Custom Tiling (other bugs)
Version First Reported In: 6.0.5
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: multiscreen, usability
Depends on:
Blocks:
 
Reported: 2024-06-07 05:33 UTC by m1vri31c
Modified: 2026-02-09 23:31 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments
A Screenshot Of The Potentially-Relevant Preference (3.94 KB, image/png)
2026-02-09 23:31 UTC, Mr Roke Julian Lockhart Beedell
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m1vri31c 2024-06-07 05:33:45 UTC
SUMMARY
You can set the padding to be different on each of your monitors but if you change the display configuration it may forget your settings. 

STEPS TO REPRODUCE
1. Set different padding on two different monitors (mine are of different sizes and have different scaling factors, hence the different padding settings).
2. Disconnect the display whose padding was set last
3. Reconnect the display

OBSERVED RESULT
Padding settings are lost on reconnected monitor

EXPECTED RESULT
Padding settings are remembered from the last time they were set – preferably any monitor the same size (based on resolution and scaling factor) would have the same padding settings.


SOFTWARE/OS VERSIONS
NixOS 24.11 (unstable channel)
KDE Plasma Version: 6.0.5
KDE Frameworks Version: 6.2.0 
Qt Version: 6.7.1
Comment 1 m1vri31c 2024-06-07 05:36:59 UTC
Update: It is not always the padding setting that was last set that is maintained.
Comment 2 David Edmundson 2024-06-08 06:34:39 UTC
It's not stored on a per-screen basis. 
The code is working as expected, but the UI is misleading showing on every screen.

We can change that to only be on the primary screen.
Comment 3 m1vri31c 2024-06-08 06:37:52 UTC
(In reply to David Edmundson from comment #2)
> It's not stored on a per-screen basis. 
> The code is working as expected, but the UI is misleading showing on every
> screen.
> 
> We can change that to only be on the primary screen.

It would be great if it could store it per-screen in the future, since larger monitors often feel better with more padding and vice versa.
Comment 4 Tobias Fella 2026-02-02 10:09:31 UTC
(In reply to David Edmundson from comment #2)
> It's not stored on a per-screen basis. 
> The code is working as expected, but the UI is misleading showing on every
> screen.

It's not just the UI being misleading, at runtime the padding is applied per-screen.
 
> We can change that to only be on the primary screen.

I'd propose properly allow setting and saving it per-screen, the change required for that seems minimal.
Comment 5 Bug Janitor Service 2026-02-02 14:06:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8732
Comment 6 Vlad Zahorodnii 2026-02-04 10:59:35 UTC
Git commit 348d0a0381f7bc7eb04c8fc5db5dc725a1a531a0 by Vlad Zahorodnii, on behalf of Tobias Fella.
Committed on 04/02/2026 at 10:11.
Pushed by vladz into branch 'master'.

Save tiling padding per screen

The current UI already sets it per-screen at runtime, but only saves it globally.
When restarting, the padding then appears different than the user expects.
Instead, save the padding per screen.

M  +4    -2    src/tiles/tilemanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/348d0a0381f7bc7eb04c8fc5db5dc725a1a531a0
Comment 7 Vlad Zahorodnii 2026-02-04 13:12:23 UTC
Git commit d3c093eabce38bd85638fd599f3a6fafac6074fe by Vlad Zahorodnii, on behalf of Tobias Fella.
Committed on 04/02/2026 at 12:02.
Pushed by vladz into branch 'Plasma/6.6'.

Save tiling padding per screen

The current UI already sets it per-screen at runtime, but only saves it globally.
When restarting, the padding then appears different than the user expects.
Instead, save the padding per screen.
(cherry picked from commit 348d0a0381f7bc7eb04c8fc5db5dc725a1a531a0)

M  +4    -2    src/tiles/tilemanager.cpp

https://invent.kde.org/plasma/kwin/-/commit/d3c093eabce38bd85638fd599f3a6fafac6074fe
Comment 8 Mr Roke Julian Lockhart Beedell 2026-02-09 23:31:24 UTC
Created attachment 189415 [details]
A Screenshot Of The Potentially-Relevant Preference

If we refer to the Custom Tiling padding, I would prefer the padding preference to be applied to all displays, because:

-	I frequently add and remove displays.

-	I utilise the same padding on each:

	- …to work around https://discuss.kde.org/t/31979/6?u=rokejulianlockhart.

	- …because it *was* useful for screenshots, before https://discuss.kde.org/t/44175?u=rokejulianlockhart (so it likely shall be again, when/if resolved).

	- …because 3 pixels prevents the bottom-most window border rendering below the display.