Save tiling padding per screen

The current UI already sets it per-screen at runtime, but only saves it globally.
When restarting, the padding then appears different than the user expects.
Instead, save the padding per screen.

BUG: 488138
(cherry picked from commit 348d0a0381f7bc7eb04c8fc5db5dc725a1a531a0)